--- a/index.html
+++ b/index.html
@@ -121,6 +121,27 @@
             </tr>
           </table>
         </td>
+        <td>
+          <table>
+            <tr>
+              <td>
+                JavaScript
+              </td>
+              <td>
+                ★★★
+              </td>
+            </tr>
+            <tr>
+              <td>
+                JQuery
+              </td>
+              <td>
+                ★★★
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
       </tr>
 
     </tbody>
